# Claude_Learning_2026

./: .env.example  .gitignore  CLAUDE.md  FRONTEND.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  gitignore  pyproject.toml
backend/: Dockerfile  main.py
backend/api/: deps.py
backend/api/routes/: chat.py  documents.py  evals.py  search.py
backend/core/: config.py  storage.py
backend/migrations/: env.py
backend/migrations/versions/: 3b1fa3c60faa_create_initial_tables.py  a4f2e8c19d3b_add_source_chunk_id_to_eval_results.py  b7d3f1a92e05_add_pipeline_step_and_judge_reasoning.py
backend/models/: __init__.py  database.py
backend/models/tables/: documents.py  embeddings.py  experiments.py  prompts.py
backend/services/evaluation/: __init__.py  metrics.py  synthetic.py
backend/services/generation/: __init__.py  claude.py  prompts.py
backend/services/ingestion/: chunker.py  embedder.py  parser.py
backend/services/retrieval/: __init__.py  bm25.py  hybrid.py  vector.py
backend/workers/: celery_app.py
backend/workers/tasks/: eval.py  ingest.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/experiments/: page.tsx
frontend/components/chat/: ChatInput.tsx  ConfigPanel.tsx  MessageBubble.tsx  RetrievalExplainer.tsx  SourceCard.tsx
frontend/components/documents/: ChunkInspector.tsx  (+4 more)
frontend/lib/: api.ts  glossary.ts  types.ts
infra/: prometheus.yml
infra/postgres/: init.sql
(+18 files in other folders)
