[project]
name = "rag-platform"
version = "0.1.0"
description = "A full-stack RAG platform for learning LLM/RAG techniques"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    # Task queue
    "celery[redis]>=5.4.0",
    # AI / ML
    "anthropic>=0.40.0",
    "voyageai>=0.3.0",
    "rank-bm25>=0.2.2",
    # Document parsing
    "pymupdf>=1.25.0",
    # Observability
    "langfuse>=2.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Object storage
    "minio>=7.2.0",
    "pgvector>=0.4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.uv]
package = true
